fix lifes on ie

--- a/packages/@coorpacademy-components/src/molecule/card/style.css
+++ b/packages/@coorpacademy-components/src/molecule/card/style.css
@@ -151,7 +151,7 @@
   align-items: center;
   justify-content: center;
   height: 100%;
-  padding: 0 37px;
+  padding: 0 26px;
 }
 
 .imageWrapper img {
